--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -67,3 +67,20 @@
 
 <% end %> 
 <%= link_to "Home", products_path %>
+
+
+<script>
+/*
+	var selectHandle = document.getElementById('cart_quantity');
+	selectHandle.onchange = function(){
+		var request = new XMLHttpRequest();
+		request.open('PATCH','/carts/854');
+		request.onreadystatechange = function(){
+			if(request.readyState === 4 && request.status === 200){
+				alert("works");
+			}
+		}
+		request.send();
+	};
+	*/
+</script>
