--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
   <%= csrf_meta_tags %>
+  <script src=//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js></script>
+
+  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
 </head>
 <body>
 
