--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,6 +15,7 @@
     <%= f.label :category_id %><br>
     <%= f.collection_select :category_id, Category.all , :id , :name, prompt: "Select Category "%>
   </div>
+  <span id="count"></span>
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -26,6 +27,7 @@
   <div class="field">
     <%= f.label :price %><br>
     <%= f.text_field :price %>
+    <span id="priceError"></span>
   </div>
   <div class="field">
     <%= f.label :availability %><br>
@@ -34,6 +36,7 @@
   <div class="field">
     <%= f.label :stock %><br>
     <%= f.number_field :stock %>
+    <span id="stockError"></span>
   </div>
     <div class="field">
     <%= f.label :cover %><br>
@@ -43,3 +46,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<script src="/js/productNew.js"></script>
