--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,9 +8,9 @@
 
 <% if user_signed_in? && current_user.is_admin %>
   <%= link_to "export to excel", products_path(format: "xls") %>
-<% end %>
+<% end %> 
 
-<table>
+<table id="myTable" >
   <thead>
     <tr>
       <th></th>
@@ -21,7 +21,6 @@
       <th>Availability</th>
       <th>Stock</th>
       <th>Avg.rating(total reviews)</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -51,8 +50,7 @@
          <td> <%= avg %> </td>
         <% end %>
         <% if user_signed_in? && current_user.is_admin %>
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_product_path(product) %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -64,3 +62,11 @@
 <% if user_signed_in? && current_user.is_admin %>
   <%= link_to 'New Product', new_product_path %>
 <% end %>
+
+<script>
+/*
+$(document).ready(function(){
+    $('#myTable').DataTable();
+});
+*/
+</script>
